--- a/package.json
+++ b/package.json
@@ -66,9 +66,12 @@
     "karma-phantomjs-launcher": "~0.1.4",
     "karma-requirejs": "~0.2.1",
     "karma-script-launcher": "~0.1.0",
+    "mockery": "^1.4.0",
     "open": "~0.0.4",
     "requirejs": "~2.1.11",
+    "rewire": "^2.1.3",
     "should": "~3.3.1",
+    "sinon": "^1.12.2",
     "supertest": "~0.11.0",
     "time-grunt": "~0.3.1"
   },
